@@ -23,9 +23,11 @@ proftpd-dfsg (1.3.5a-2) UNRELEASED; urgency=medium
     place as there is no guarantee that any resources opened for setpwent()
     are used for other getpw{nam,uid}() calls.
     </quote>
-  * Some files created during build were not removed during clean.
   * lintian "W: invalid-short-name-in-dep5-copyright bsd" (BSD-3-clause).
   * Same URL for Vcs-Git & Vcs-Browser in control file.
+  * Some suggestions by Mattia Rizzolo <mattia@debian.org> for debian/rules
+    - Update of config.{sub,guess} is done by dh_update_autotools_config
+    (- Some files created during build were not removed during clean.)
 
  -- Mahyuddin Susanto <udienz@gmail.com>  Wed, 24 Aug 2016 15:23:38 -0700
 
